--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="body">
-        <canvas id="mainCanvas" width="300" height="150"></canvas>
-    </div>
+    <canvas id="mainCanvas"></canvas>
 </body>
 <script src="index.js"></script>
 </html>
